feat: rework + statistics endpoint
