# internal/controller/dreams.go
@@ -1,4 +1,4 @@
-package v1
+package controller
 
 import (
 	"net/http"
@@ -10,18 +10,18 @@ import (
 )
 
 type dreamsRoutes struct {
-	d usecase.Dreams
-	c usecase.CategoriesAdderRemover
+	d usecase.IDreams
+	c usecase.ICategories
 }
 
-func newDreamsRoute(handler *gin.RouterGroup, d usecase.Dreams, c usecase.CategoriesAdderRemover) {
+func newDreamsRoute(handler *gin.RouterGroup, d usecase.IDreams, c usecase.ICategories) {
 	r := &dreamsRoutes{d, c}
 
 	h := handler.Group("/dreams")
 	{
 		h.GET("", r.GetAll)
 		h.POST("", r.Create)
-		hid := h.Group("/:id")
+		hid := h.Group("/:dreamId")
 		{
 			hid.GET("", r.Get)
 			hid.PATCH("", r.Update)
@@ -29,13 +29,9 @@ func newDreamsRoute(handler *gin.RouterGroup, d usecase.Dreams, c usecase.Catego
 			hid.PATCH("/finalize", r.Finalize)
 			hCat := hid.Group("/categories")
 			{
-				hCat.PUT("", r.PutCategoryToDream)
+				hCat.POST("", r.AddCategoryToDream)
+				hCat.PUT("/:categoryId", r.PutCategoryToDream)
 				hCat.DELETE("/:categoryId", r.RemoveCategoryFromDream)
-			}
-			hPer := hid.Group("/persons")
-			{
-				hPer.PUT("", r.PutPersonToDream)
-				hPer.DELETE("/:personId", r.RemovePersonFromDream)
 			}
 		}
 	}
@@ -45,10 +41,8 @@ func newDreamsRoute(handler *gin.RouterGroup, d usecase.Dreams, c usecase.Catego
 // @Produce json
 // @Success 200 {object} entity.DreamsResponse "List of all dreams"
 // @Router /dreams [get]
-// @Param includes query string false "Comma separated list of child objects. Possible entries: categories, persons"
 func (r *dreamsRoutes) GetAll(g *gin.Context) {
-	includes := entity.ParseIncludes(g.Query("includes"))
-	dreams := r.d.List(includes)
+	dreams, _ := r.d.List(g.Request.Context())
 	g.JSON(200, dreams.ToResponse())
 }
 
@@ -59,12 +53,12 @@ func (r *dreamsRoutes) GetAll(g *gin.Context) {
 // @Failure 404
 // @Router /dreams/{dreamId} [get]
 func (r *dreamsRoutes) Get(g *gin.Context) {
-	id, err := parseParamUint(g, "id")
+	id, err := parseParamUint(g, "dreamId")
 	if handleError(g, err) {
 		return
 	}
 
-	dream, err := r.d.Get(id)
+	dream, err := r.d.Get(g.Request.Context(), id)
 	if handleError(g, err) {
 		return
 	}
@@ -94,7 +88,7 @@ func (r *dreamsRoutes) Create(g *gin.Context) {
 		g.AbortWithError(http.StatusBadRequest, entity.ErrorBadParam)
 		return
 	}
-	id, err := r.d.Create(body.Date)
+	id, err := r.d.Create(g.Request.Context(), body.Date)
 	if handleError(g, err) {
 		return
 	}
@@ -120,12 +114,12 @@ func (r *dreamsRoutes) Update(g *gin.Context) {
 	if handleError(g, err) {
 		return
 	}
-	id, err := parseParamUint(g, "id")
+	id, err := parseParamUint(g, "dreamId")
 	if handleError(g, err) {
 		return
 	}
 
-	err = r.d.Update(id, body.Date, body.Description, body.Rating)
+	err = r.d.Update(g.Request.Context(), id, body.Date, body.Description, body.Rating)
 	if handleError(g, err) {
 		return
 	}
@@ -138,110 +132,91 @@ func (r *dreamsRoutes) Update(g *gin.Context) {
 // @Failure 404
 // @Router /dreams/{dreamId} [delete]
 func (r *dreamsRoutes) Delete(g *gin.Context) {
-	id, err := parseParamUint(g, "id")
+	id, err := parseParamUint(g, "dreamId")
 	if handleError(g, err) {
 		return
 	}
 
-	categories, err := r.d.Delete(id)
+	err = r.d.Delete(g.Request.Context(), id)
 	if handleError(g, err) {
 		return
 	}
-	g.JSON(http.StatusOK, categories.ToResponse())
+	g.Status(http.StatusOK)
 }
 
-// @Description Add a person to a dream
+// @Description Add an exiting person or category to a dream
 // @Produce json
-// @Success 200 {object} entity.CategoriesResponse
+// @Success 200
 // @Failure 400
 // @Failure 404
-// @Router /dreams/{dreamId}/persons [put]
-// @Param name query string true "Name of person"
-func (r *dreamsRoutes) PutPersonToDream(g *gin.Context) {
-	dreamId, err := parseParamUint(g, "id")
-	if handleError(g, err) {
-		return
-	}
-	name, err := parseQueryParamString(g, "name")
-	if handleError(g, err) {
-		return
-	}
-
-	cats, err := r.c.AddPersonToDream(name, dreamId)
-	if handleError(g, err) {
-		return
-	}
-	g.JSON(http.StatusOK, cats.ToResponse())
-}
-
-// @Description Delete a person from a dream
-// @Produce json
-// @Success 200 {object} entity.CategoriesResponse
-// @Failure 400
-// @Failure 404
-// @Router /dreams/{dreamId}/persons/{personId} [delete]
-func (r *dreamsRoutes) RemovePersonFromDream(g *gin.Context) {
-	dreamId, err := parseParamUint(g, "id")
-	if handleError(g, err) {
-		return
-	}
-	personId, err := parseParamUint(g, "personId")
-	if handleError(g, err) {
-		return
-	}
-
-	persons, err := r.c.RemoveFromDream(personId, dreamId)
-	if handleError(g, err) {
-		return
-	}
-	g.JSON(http.StatusOK, persons.ToResponse())
-}
-
-// @Description Add a category to a dream
-// @Produce json
-// @Success 200 {object} entity.CategoriesResponse
-// @Failure 400
-// @Failure 404
-// @Router /dreams/{dreamId}/categories [put]
-// @Param name query string true "Name of a category"
+// @Router /dreams/{dreamId}/category/{categoryId} [put]
 func (r *dreamsRoutes) PutCategoryToDream(g *gin.Context) {
-	dreamId, err := parseParamUint(g, "id")
+	dreamId, err := parseParamUint(g, "dreamId")
 	if handleError(g, err) {
 		return
 	}
-	name, err := parseQueryParamString(g, "name")
+	catId, err := parseParamUint(g, "categoryId")
 	if handleError(g, err) {
 		return
 	}
-
-	cats, err := r.c.AddCategoryToDream(name, dreamId)
+	err = r.c.AddCategoryToDream(g.Request.Context(), dreamId, catId)
 	if handleError(g, err) {
 		return
 	}
-	g.JSON(http.StatusOK, cats.ToResponse())
+	g.Status(http.StatusOK)
 }
 
-// @Description Remove a category from a dream
+type PostCategoryRequestBody struct {
+	Name string              `json:"name"`
+	Type entity.CategoryType `json:"categoryType"`
+}
+
+// @Description Add a new person or category to a dream
 // @Produce json
-// @Success 200 {object} entity.CategoriesResponse
+// @Success 201 {number} ID
 // @Failure 400
 // @Failure 404
-// @Router /dreams/{dreamId}/categories/{categoryId} [delete]
-func (r *dreamsRoutes) RemoveCategoryFromDream(g *gin.Context) {
-	dreamId, err := parseParamUint(g, "id")
+// @Router /dreams/{dreamId}/category [post]
+// @Param params body PostCategoryRequestBody true "Name and category. Allowed values for 'catgory' are: 'person', 'category'"
+func (r *dreamsRoutes) AddCategoryToDream(g *gin.Context) {
+	dreamId, err := parseParamUint(g, "dreamId")
 	if handleError(g, err) {
 		return
 	}
-	categoryId, err := parseParamUint(g, "categoryId")
+	var body PostCategoryRequestBody
+	if err := g.BindJSON(&body); err != nil {
+		g.AbortWithError(http.StatusBadRequest, err)
+		return
+	}
+	id, err := r.c.AddNewCategoryToDream(g.Request.Context(), dreamId, body.Name, body.Type)
+	if handleError(g, err) {
+		return
+	}
+	g.JSON(http.StatusCreated, id)
+
+}
+
+// @Description Delete a category or person from a dream
+// @Produce json
+// @Success 200
+// @Failure 400
+// @Failure 404
+// @Router /dreams/{dreamId}/category/{categoryId} [delete]
+func (r *dreamsRoutes) RemoveCategoryFromDream(g *gin.Context) {
+	dreamId, err := parseParamUint(g, "dreamId")
+	if handleError(g, err) {
+		return
+	}
+	catId, err := parseParamUint(g, "categoryId")
 	if handleError(g, err) {
 		return
 	}
 
-	categories, err := r.c.RemoveFromDream(categoryId, dreamId)
+	err = r.c.RemoveCategoryFromDream(g.Request.Context(), dreamId, catId)
 	if handleError(g, err) {
 		return
 	}
-	g.JSON(http.StatusOK, categories.ToResponse())
+	g.Status(http.StatusOK)
 }
 
 // @Description Finalize a dream
@@ -251,12 +226,12 @@ func (r *dreamsRoutes) RemoveCategoryFromDream(g *gin.Context) {
 // @Failure 404
 // @Router /dreams/{dreamId}/finalize [patch]
 func (r *dreamsRoutes) Finalize(g *gin.Context) {
-	dreamId, err := parseParamUint(g, "id")
+	dreamId, err := parseParamUint(g, "dreamId")
 	if handleError(g, err) {
 		return
 	}
 
-	err = r.d.Finalize(dreamId)
+	err = r.d.Finalize(g.Request.Context(), dreamId)
 	if handleError(g, err) {
 		return
 	}
