# internal/entity/statistics.go
@@ -1,27 +1,49 @@
 package entity
 
-type Count struct {
-	ID    uint
-	Count int
+type CountByCat struct {
+	CategoryId uint  `json:"id" gorm:"column:category_id"`
+	Count      int64 `json:"count" gorm:"column:count"`
 }
 
-type Counts []Count
+type CategoriesCount []CountByCat
 
-type CountResponse struct {
-	ID    uint `json:"id" binding:"required"`
-	Count int  `json:"count" binding:"required"`
+type CategoriesCountResponse struct {
+	Categories []CountByCat `json:"categories"`
 }
 
-type CountsResponse struct {
-	Categories []CountResponse `json:"categories" binding:"required"`
-	Persons    []CountResponse `json:"persons" binding:"required"`
+func (cc CategoriesCount) ToResponse() CategoriesCountResponse {
+	return CategoriesCountResponse{Categories: cc}
 }
 
-func (counts Counts) ToResponse() []CountResponse {
-	var countResponses = []CountResponse{}
-	for _, c := range counts {
-		var countResponse = CountResponse(c)
-		countResponses = append(countResponses, countResponse)
+type CountByCatAndMonth struct {
+	CategoryId uint `gorm:"column:category_id"`
+	CountByMonth
+}
+
+type CountByMonth struct {
+	Month string `gorm:"column:month"`
+	Count int64  `gorm:"column:count"`
+}
+type CountByMonths []CountByMonth
+
+type Statistic struct {
+	Month      string       `json:"month"`
+	Categories []CountByCat `json:"categories"`
+	DreamCount int64        `json:"dreamCount"`
+}
+
+type Statistics []Statistic
+
+func (cs CountByMonths) ToResponse(ms []CountByCatAndMonth) Statistics {
+	var statistics = Statistics{}
+	for _, c := range cs {
+		for _, m := range ms {
+			var cats = []CountByCat{}
+			if c.Month == m.Month {
+				cats = append(cats, CountByCat{CategoryId: m.CategoryId, Count: m.Count})
+			}
+			statistics = append(statistics, Statistic{Month: c.Month, Categories: cats, DreamCount: c.Count})
+		}
 	}
-	return countResponses
+	return statistics
 }
